# SyCLDslash

./: AUTHORS  CMakeLists.txt  LICENSE  README.md  SyCLDslashConfig.cmake.in
cmake/: FindComputeCpp.cmake
include/: libsrc.h  myproj_config.h.cmake.in  sycl_dslash_config.h.cmake.in
include/dslash/: dslash_complex.h  dslash_defaults.h  dslash_scalar_complex_ops.h  dslash_vector_complex_ops_omp.h  dslash_vectype_omp.h  dslash_vectype_sycl.h  dslash_vectype_sycl_a.h  dslash_vectype_sycl_b.h  dslash_vectype_sycl_subgroup.h  dslash_vnode.h  dslash_vnode_a.h  dslash_vnode_b.h  dslash_vnode_subgroup.h  kokkos_matvec.h  kokkos_qdp_utils.h  kokkos_vdslash.h  kokkos_vectype.h  kokkos_vnode.h  kokkos_vspinproj.h  sycl_qdp_vutils.h  sycl_vdslash.h  sycl_vdslash_subgroup.h  sycl_view.h  sycl_vmatvec.h  sycl_vmatvec_subgroup.h  sycl_vneighbor_table.h  sycl_vneighbor_table_broken.h  sycl_vneighbor_table_subgroup.h  sycl_vspinproj.h  sycl_vspinproj_subgroup.h  sycl_vtypes.h
include/lattice/: constants.h  lattice_info.h  nodeinfo.h
include/utils/: initialize.h  print_utils.h
lib/: CMakeLists.txt  libsrc.cpp
lib/lattice/: lattice_info.cpp  nodeinfo.cpp  nodeinfo_qmp.cpp  nodeinfo_single.cpp
lib/utils/: initialize.cpp  print_utils.cpp
test/: CMakeLists.txt  dslashm_w.cpp  dslashm_w.h  qdpxx_latticeinit.cpp  qdpxx_latticeinit.h  qdpxx_utils.h  reunit.cpp  reunit.h  sycl_lattice_spin_proj_utils.h  test1.cpp  test_dslash_sycl.cpp  test_dslash_sycl_subgroup.cpp  test_dslash_sycl_vperf.cpp  test_dslash_sycl_vperf_subgroup.cpp  test_env.cpp  test_env.h  test_kokkos_vnode.cpp  test_qdp_utils.cpp  test_qdp_utils_sycl.cpp  test_subblock_launch.cpp  test_vectype_omp.cpp  test_vectype_subgroup_sycl.cpp  test_vectype_sycl.cpp  test_vectype_sycl_b.cpp  test_view_sycl.cpp  test_vneighbor_table_sycl.cpp  test_vneighbor_table_sycl_broken.cpp  test_vnode_sycl.cpp  test_vspinproj_sycl.cpp
